2004-05-07  Werner Koch  <wk@gnupg.org>

	* random.c (initialize): Factored out some code to ..
	(initialize_basics): .. new function.
	(_gcry_random_initialize): Just call initialize_basics unless the
	new arg FULL is set to TRUE.
	(_gcry_fast_random_poll): Don't do anything unless the random
	system has been really initialized.

2004-05-07  Moritz Schulte  <moritz@g10code.de>

	* ac.c (gcry_ac_open): Do not dereference NULL pointer.  Reported
	by Umberto Salsi.

2004-02-20  Werner Koch  <wk@gnupg.org>

	* primegen.c (check_prime): New args CB_FUNC and CB_ARG; call them
	at different stages.  Pass these arguments through all callers.

2004-02-06  Werner Koch  <wk@gnupg.org>

	* des.c: Add a new OID as used by pkcs#12.

	* rfc2268.c: New. Taken from libgcrypt. 
	* cipher.c: Setup the rfc2268 algorithm.

2004-01-25  Moritz Schulte  <mo@g10code.com>

	* primegen.c (prime_generate_internal): Do not forget to free
	`q_factor'; fixed by Brieuc Jeunhomme.
	(prime_generate_internal): Do not forget to free `prime'.

2004-01-14  Moritz Schulte  <mo@g10code.com>

	* ac.c (gcry_ac_data_set): New argument: flags; slightly
	rewritten.
	(gcry_ac_data_get_name, gcry_ac_data_get_index): Likewise.
	(gcry_ac_key_pair_generate): New argument: misc_data; modified
	order of arguments.
	(gcry_ac_key_test): New argument: handle.
	(gcry_ac_key_get_nbits, gcry_ac_key_get_grip): Likewise.
	Use GCRY_AC_FLAG_NO_BLINDING instead of
	GCRY_AC_DATA_FLAG_NO_BLINDING.
	(gcry_ac_mpi): New member: flags.
	(gcry_ac_data_search, gcry_ac_data_add): Removed functions.

2003-12-22  Werner Koch  <wk@gnupg.org>

	* primegen.c (is_prime): Release A2.

2003-12-19  Werner Koch  <wk@gnupg.org>

	* md.c: Moved a couple of functions down below the data structure
	definitions.
	(struct gcry_md_context): New field ACTUAL_HANDLE_SIZE.
	(md_open): Set it here.
	(strcut gcry_md_list): New field ACTUAL_STRUCT_SIZE.
	(md_enable): Set it here.
	(md_close): Wipe the context memory.
	secure memory.